--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
-  },
+    "lint": "vue-cli-service lint",
+    "lint:fix": "vue-cli-service lint --fix"
+},
   "dependencies": {
     "core-js": "^3.8.3",
     "primeflex": "^3.3.1",
