--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
     "lint:fix": "vue-cli-service lint --fix"
-},
+  },
   "dependencies": {
     "core-js": "^3.8.3",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primevue": "^3.46.0",
+    "sass": "^1.69.7",
+    "sass-loader": "^13.3.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
